--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: etmstuff
-Title: What the Package Does (One Line, Title Case)
+Title: All my custom functions in one place
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Eliot", "Monaco", , "eliotmonaco@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Functions with broad applications and functions for handling lead program data.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/eliotmonaco/etmstuff
 BugReports: https://github.com/eliotmonaco/etmstuff/issues
+Imports: 
+    dplyr,
+    purrr,
+    rlang,
+    stats,
+    stringr,
+    utils
