--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,13 @@ RoxygenNote: 7.2.3
 URL: https://github.com/eliotmonaco/etmstuff
 BugReports: https://github.com/eliotmonaco/etmstuff/issues
 Imports: 
+    assertive,
+    digest,
     dplyr,
+    lubridate,
     purrr,
     rlang,
     stats,
     stringr,
+    tidyr,
     utils
