--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(prox_check)
 export(skipper_seq)
 export(standardize)
 export(subset_date_range)
+export(undupe)
 export(var_check)
 importFrom(assertive,is_data.frame)
 importFrom(digest,digest)
@@ -40,6 +41,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
