Added remaining undupe family functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,12 @@ Imports:
     assertive,
     digest,
     dplyr,
+    future,
+    future.apply,
     lubridate,
+    openxlsx,
     purrr,
+    RDCOMClient,
     rlang,
     stats,
     stringr,
