--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(aggregate_values)
 export(calculate_age)
 export(check_lab_results)
 export(clean_lab_results)
+export(clean_values)
 export(config_epitrax)
 export(count_dupeset_diffs)
 export(distill_dupeset_diffs)
@@ -16,12 +17,16 @@ export(parse_lab_results)
 export(pattern_check_df)
 export(pick_highest_confirmed_test)
 export(prox_check)
+export(pull_addresses)
+export(replace_values)
 export(skipper_seq)
 export(standardize)
 export(subset_date_range)
 export(undupe)
+export(validate_values)
 export(var_check)
 importFrom(RDCOMClient,COMCreate)
+importFrom(RDCOMClient,createCOMReference)
 importFrom(assertive,is_data.frame)
 importFrom(digest,digest)
 importFrom(dplyr,"%>%")
@@ -65,6 +70,7 @@ importFrom(purrr,is_empty)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
+importFrom(stats,setNames)
 importFrom(stringr,regex)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
