--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(pick_highest_confirmed_test)
 export(prox_check)
 export(pull_addresses)
 export(replace_values)
+export(simulate_data)
 export(skipper_seq)
 export(standardize)
 export(subset_date_range)
@@ -71,6 +72,7 @@ importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
+importFrom(stringr,"str_sub<-")
 importFrom(stringr,regex)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -81,6 +83,7 @@ importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
+importFrom(stringr,str_to_title)
 importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
 importFrom(tidyr,unite)
