Renamed and made minor changes to dupeset_conflict_count() and dupeset_conflict_focus(). Added vars parameter to standardize().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(check_lab_results)
 export(clean_lab_results)
 export(clean_values)
 export(config_epitrax)
-export(count_dupeset_diffs)
 export(distill_dupeset_diffs)
 export(dupes2xl)
+export(dupeset_conflict_count)
 export(get_quarter)
 export(get_year)
 export(id_distinct_rows)
