--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(check_lab_results)
 export(clean_lab_results)
 export(clean_values)
 export(config_epitrax)
-export(distill_dupeset_diffs)
 export(dupes2xl)
 export(dupeset_conflict_count)
+export(dupeset_conflict_focus)
 export(get_quarter)
 export(get_year)
 export(id_distinct_rows)
