Created undupe2(), which undupes by assigning a number sequence to rows with the same dupe_id. df_full and df_distinct are identical in both undupe functions (except for the last variables). df_dupesets has identical rows but a different order. undupe2() seemingly preserves the original dataframe row order better.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(skipper_seq)
 export(standardize)
 export(subset_date_range)
 export(undupe)
+export(undupe2)
 export(validate_values)
 export(var_check)
 importFrom(RDCOMClient,COMCreate)
@@ -42,6 +43,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
@@ -58,6 +60,7 @@ importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,transmute)
+importFrom(dplyr,ungroup)
 importFrom(future,multisession)
 importFrom(future,plan)
 importFrom(future.apply,future_mapply)
