--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,13 +24,8 @@ export(skipper_seq)
 export(standardize)
 export(subset_date_range)
 export(undupe)
-export(undupe2)
 export(validate_values)
 export(var_check)
-importFrom(RDCOMClient,COMCreate)
-importFrom(RDCOMClient,createCOMReference)
-importFrom(assertive,is_data.frame)
-importFrom(digest,digest)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -61,21 +56,10 @@ importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
-importFrom(future,multisession)
-importFrom(future,plan)
-importFrom(future.apply,future_mapply)
-importFrom(lubridate,is.Date)
-importFrom(openxlsx,addWorksheet)
-importFrom(openxlsx,loadWorkbook)
-importFrom(openxlsx,removeWorksheet)
-importFrom(openxlsx,saveWorkbook)
-importFrom(openxlsx,writeData)
-importFrom(purrr,is_empty)
+importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
-importFrom(stats,setNames)
-importFrom(stringr,"str_sub<-")
 importFrom(stringr,regex)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -86,9 +70,7 @@ importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
-importFrom(stringr,str_to_title)
 importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
-importFrom(tidyr,unite)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
