--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calculate_age)
 export(check_lab_results)
 export(clean_lab_results)
 export(clean_values)
+export(compare_parsed_street)
 export(config_epitrax)
 export(count_conflicts)
 export(dupes2xl)
