Minor updates to address cleaning functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(calculate_age)
 export(check_date_seq)
 export(check_lab_results)
 export(clean_lab_results)
-export(clean_values)
+export(clean_street_address)
 export(compare_parsed_street)
 export(config_epitrax)
 export(count_conflicts)
