Updated address cleaning functions. Updated simulate_data() to account for earlier change to ks_cities.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,7 @@ export(standardize)
 export(submit_to_md)
 export(subset_date_range)
 export(undupe)
-export(validate_values)
+export(validate_address)
 export(var_check)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
