Renamed submit_to_md() to send_md_request()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,10 @@ export(pick_highest_confirmed_test)
 export(prox_check)
 export(pull_addresses)
 export(replace_values)
+export(send_md_request)
 export(simulate_data)
 export(skipper_seq)
 export(standardize)
-export(submit_to_md)
 export(subset_date_range)
 export(undupe)
 export(validate_address)
