--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(get_year)
 export(id_distinct_rows)
 export(isolate_conflicts)
 export(match_elements)
+export(md_batch_request)
+export(md_request)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
