--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_md_url)
 export(calculate_age)
 export(check_date_seq)
 export(check_lab_results)
+export(classify_test_reason)
 export(clean_lab_results)
 export(clean_street_address)
 export(compare_parsed_street)
