--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(isolate_conflicts)
 export(match_elements)
 export(md_batch_request)
 export(md_request)
+export(merge_address_registry)
+export(merge_child_registry)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
