Updated CBLS functions and added cbls_write_fwf()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cbls_investigation_table)
 export(cbls_lab_table)
 export(cbls_table_key)
 export(cbls_undupe)
+export(cbls_write_fwf)
 export(check_date_seq)
 export(check_lab_results)
 export(classify_test_reason)
