Added fuzzy_compare(). Beginning to modify simulate_data(). Modified internal data used in simulate_data().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(config_epitrax)
 export(count_conflicts)
 export(dupes2xl)
 export(flatten_conflicts)
+export(fuzzy_compare)
 export(get_quarter)
 export(get_year)
 export(id_distinct_rows)
