Renamed simulate_data() to sim_address() and updated function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,7 @@ export(prox_check)
 export(pull_addresses)
 export(replace_values)
 export(send_md_request)
-export(simulate_data)
+export(sim_address)
 export(skipper_seq)
 export(standardize)
 export(subset_date_range)
