--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     future,
     future.apply,
     gdata,
+    httr,
     jsonlite,
     lubridate,
     magrittr,
@@ -26,6 +27,7 @@ Imports:
     purrr,
     RDCOMClient,
     rlang,
+    shiny,
     stats,
     stringdist,
     stringr,
