--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(skipper_seq)
 export(standardize)
 export(subset_date_range)
 export(undupe)
+export(usps_lookup)
 export(validate_address)
 export(var_check)
 importFrom(magrittr,"%>%")
