Updated pick_max_cfm_test(). Added styles.css to internal data for streamlined updating (hopefully).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ export(merge_child_registry)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
-export(pick_highest_confirmed_test)
+export(pick_max_cfm_test)
 export(prox_check)
 export(pull_addresses)
 export(replace_values)
