Added my_kable() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(md_batch_request)
 export(md_request)
 export(merge_address_registry)
 export(merge_child_registry)
+export(my_kable)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
