--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(md_request)
 export(merge_address_registry)
 export(merge_child_registry)
 export(my_kable)
+export(my_xlsx)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
