--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(clean_street_address)
 export(compare_parsed_street)
 export(config_epitrax)
 export(count_conflicts)
+export(create_bl_data_project)
 export(dupes2xl)
 export(flatten_conflicts)
 export(fuzzy_compare)
