Converted pick_max_cfm_test() to pick_max_test_result() and made changes to wording in documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ export(my_xlsx)
 export(parse_lab_results)
 export(parse_street_addresses)
 export(pattern_check_df)
-export(pick_max_cfm_test)
+export(pick_max_test_result)
 export(prox_check)
 export(pull_addresses)
 export(replace_values)
