--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(md_request)
 export(merge_address_registry)
 export(merge_child_registry)
 export(my_kable)
+export(my_xl_table)
 export(my_xlsx)
 export(parse_lab_results)
 export(parse_street_addresses)
