Replaced merge_address_registry() and merge_child_registry() with cbls_registry_merge()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cbls_check_table)
 export(cbls_child_table)
 export(cbls_investigation_table)
 export(cbls_lab_table)
+export(cbls_registry_merge)
 export(cbls_table_key)
 export(cbls_undupe)
 export(cbls_write_fwf)
@@ -27,8 +28,6 @@ export(isolate_conflicts)
 export(match_elements)
 export(md_batch_request)
 export(md_request)
-export(merge_address_registry)
-export(merge_child_registry)
 export(my_kable)
 export(my_xl_table)
 export(my_xlsx)
