Updated algorithm for getting days to followup test in assign_test_reason(). Added followup_overdue_flag().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(config_epitrax)
 export(count_conflicts)
 export(create_bl_data_project)
 export(flatten_conflicts)
+export(followup_overdue_flag)
 export(fuzzy_compare)
 export(get_quarter)
 export(get_year)
