Updated subdirectories created by create_bl_project(), and changed function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(clean_lab_results)
 export(clean_street_address)
 export(config_epitrax)
 export(count_conflicts)
-export(create_bl_data_project)
+export(create_bl_project)
 export(flag_elevated_results)
 export(flag_overdue_followup)
 export(flatten_conflicts)
