--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,11 +31,13 @@ export(isolate_conflicts)
 export(match_elements)
 export(md_batch_request)
 export(md_request)
+export(md_results_table)
 export(my_kable)
 export(my_xl_table)
 export(my_xlsx)
 export(parse_lab_results)
 export(pattern_check_df)
+export(pct)
 export(pick_max_test_result)
 export(prox_check)
 export(pull_addresses)
