--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(clean_street_address)
 export(config_epitrax)
 export(count_conflicts)
 export(create_bl_project)
+export(find_close_tests)
 export(flag_elevated_results)
 export(flag_overdue_followup)
 export(flatten_conflicts)
