Replaced lab_results.R with test_results.R. Modified functions to take vectors as args and return vectors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,9 @@ export(cbls_table_key)
 export(cbls_undupe)
 export(cbls_write_fwf)
 export(check_date_seq)
-export(check_lab_results)
+export(check_results)
 export(clean_address)
-export(clean_lab_results)
+export(clean_results)
 export(config_epitrax)
 export(count_conflicts)
 export(create_bl_project)
@@ -36,7 +36,7 @@ export(md_results_table)
 export(my_kable)
 export(my_xl_table)
 export(my_xlsx)
-export(parse_lab_results)
+export(parse_results)
 export(pattern_check_df)
 export(pct)
 export(pick_max_test_result)
