Added flag_results() to test_results.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(create_bl_project)
 export(find_close_tests)
 export(flag_elevated_results)
 export(flag_overdue_followup)
+export(flag_results)
 export(flatten_conflicts)
 export(fuzzy_compare)
 export(get_quarter)
