Updated fuzzy_compare.R: returns fuzzy variables as merged strings instead of separate values, added row_id arg, ordered output by sim_score, updated documentation, simplified code. Added addresses.R in test data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(undupe)
 export(usps_lookup)
 export(validate_address)
 export(var_check)
+importFrom(dplyr,"%>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
