Rewrote build_md_url.R and send_md_request.R (replaces md_request.R) with improved vectorization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(clean_results)
 export(config_epitrax)
 export(count_conflicts)
 export(create_bl_project)
+export(create_report)
 export(find_close_tests)
 export(flag_elevated_results)
 export(flag_overdue_followup)
@@ -31,8 +32,6 @@ export(get_year)
 export(id_distinct_rows)
 export(isolate_conflicts)
 export(match_elements)
-export(md_batch_request)
-export(md_request)
 export(md_results_table)
 export(my_kable)
 export(my_xl_table)
