Updated several address functions, particularly arguments, and parsed out inner functions. Added checks to various functions. Renamed pattern_check_df.R to check_df_pattern.R.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(cbls_table_key)
 export(cbls_undupe)
 export(cbls_write_fwf)
 export(check_date_seq)
+export(check_df_pattern)
 export(check_results)
 export(clean_address)
 export(clean_results)
@@ -37,7 +38,6 @@ export(my_kable)
 export(my_xl_table)
 export(my_xlsx)
 export(parse_results)
-export(pattern_check_df)
 export(pct)
 export(pick_max_test_result)
 export(prox_check)
