Minor rewrite to subset_dates.R (was subset_date_range.R) and added tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,7 @@ export(replace_values)
 export(sim_address)
 export(skipper_seq)
 export(standardize)
-export(subset_date_range)
+export(subset_dates)
 export(track_followups)
 export(undupe)
 export(usps_lookup)
