Updated assign_confirmed_status.R, assign_bll_class.R, and assign_elevated_status.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(assign_bll_class)
 export(assign_confirmed_status)
+export(assign_elevated_status)
 export(assign_test_reason)
 export(build_md_url)
 export(calculate_age)
@@ -23,7 +24,6 @@ export(config_epitrax)
 export(count_conflicts)
 export(create_bl_project)
 export(find_close_tests)
-export(flag_elevated_results)
 export(flag_overdue_followup)
 export(flag_results)
 export(flatten_conflicts)
