Added sim_lead_data.R. Added all exported data as internal data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(check_df_pattern)
 export(check_results)
 export(clean_address)
 export(clean_results)
-export(config_epitrax)
 export(count_conflicts)
 export(create_bl_project)
 export(find_close_tests)
@@ -45,6 +44,7 @@ export(prox_check)
 export(pull_addresses)
 export(replace_values)
 export(sim_address)
+export(sim_lead_data)
 export(skipper_seq)
 export(standardize)
 export(subset_dates)
