Updates to sim_lead_data.R and sim_address.R. Removed standardize.R.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(cbls_table_key)
 export(cbls_undupe)
 export(cbls_write_fwf)
 export(check_date_seq)
-export(check_df_pattern)
+export(check_pattern_df)
 export(check_results)
 export(clean_address)
 export(clean_results)
@@ -46,7 +46,6 @@ export(replace_values)
 export(sim_address)
 export(sim_lead_data)
 export(skipper_seq)
-export(standardize)
 export(subset_dates)
 export(track_followups)
 export(undupe)
