--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_date_seq)
 export(check_pattern_df)
+export(create_project_dirs)
 export(document_ksde_project)
 export(my_hist)
 export(my_kable)
